--- a/config/agents.yaml
+++ b/config/agents.yaml
@@ -7,7 +7,7 @@ global:
   max_context_length: 8192
   temperature: 0.7
   max_tokens: 2048
-  timeout_seconds: 15
+  timeout_seconds: 180  # 3 minutes for complex multi-agent operations
 
 # Agent Definitions
 agents:
