Apply aggressive optimizations for multi-agent pipeline timeouts
Critical performance improvements:
- Reduce all context sizes drastically: decomposer (1K), critique (800), synthesis (400)
- Remove long descriptions from prompts to minimize input size
- Reduce agent timeouts: decomposer/critique (60s), synthesis/formatter (90s)
- Reduce max_tokens for all agents to speed up generation
- Focus on essential content only in each agent prompt

This should resolve step 2 timeout issues.

--- a/config/agents.yaml
+++ b/config/agents.yaml
@@ -29,7 +29,7 @@ agents:
       temperature: 0.6
       max_tokens: 512
       top_p: 0.9
-      timeout: 120  # 2 minutes for decomposer agent
+      timeout: 60  # 1 minute for decomposer agent
 
   critique:
     name: "Critique Agent"
@@ -47,9 +47,9 @@ agents:
     
     parameters:
       temperature: 0.7
-      max_tokens: 800
+      max_tokens: 600
       top_p: 0.9
-      timeout: 120  # 2 minutes for critique agent
+      timeout: 60  # 1 minute for critique agent
 
   synthesis:
     name: "Synthesis Agent"
@@ -68,9 +68,9 @@ agents:
     
     parameters:
       temperature: 0.6
-      max_tokens: 1000
+      max_tokens: 800
       top_p: 0.9
-      timeout: 150  # 2.5 minutes for synthesis agent
+      timeout: 90  # 1.5 minutes for synthesis agent
 
   report_formatter:
     name: "Report Formatter"
@@ -96,9 +96,9 @@ agents:
     
     parameters:
       temperature: 0.5
-      max_tokens: 1500
+      max_tokens: 1000
       top_p: 0.9
-      timeout: 180  # 3 minutes for report formatter agent
+      timeout: 90  # 1.5 minutes for report formatter agent
 
 # Pipeline Configuration
 pipeline:
